--- a/citations/vohland2022.BIB
+++ b/citations/vohland2022.BIB
@@ -1,6 +1,6 @@
 @Report{Vohland2022,
-  author      = {Vohland, Katrin; Eichert, Stefan; Fiedler, Sarah; Kapun, Martin; Kroh, Andreas; Mehu-Blantar, Ines; Ott, Iris ; Rainer, Heimo; Schwentner, Martin; Zimmermann, Eva},
-  title       = {Open Science in Museums - Strategy of the Naturhistorisches Museum Wien (NHMW) - the benefits of openness},
+  author      = {Vohland, Katrin; Eichert, Stefan; Fiedler, Sarah; Kapun, Martin; Kroh, Andreas; Mehu-Blantar, Ines; Ott, Iris; Rainer, Heimo; Schwentner, Martin; Zimmermann, Eva},
+  title       = {Open Science in Museums - Strategy of the Naturhistorisches Museum Wien (NHMW): The benefits of openness},
   institution = {Naturhistorisches Museum Wien},
   year        = {2022},
   version     = {1.0},
