--- a/citations/vohland2022.BIB
+++ b/citations/vohland2022.BIB
@@ -5,5 +5,6 @@
   year        = {2022},
   version     = {1.0},
   location    = {Vienna},
+  doi         = {https://doi.org/10.5281/zenodo.6505108},
   keywords    = {Open Science, Museum, Open Data, Open Source, Open Innovation},
 }
